[gd_scene load_steps=9 format=3 uid="uid://cfltnj5akc3h1"]

[ext_resource type="Theme" uid="uid://2ti6cnlhlu2u" path="res://Themes/global_theme.tres" id="1_63xqc"]
[ext_resource type="Script" path="res://GameMenus/main_menu.gd" id="1_kvw74"]
[ext_resource type="FontFile" uid="uid://d14dmlhndb4qu" path="res://Fonts/Montserrat-Bold.ttf" id="2_g7lva"]
[ext_resource type="PackedScene" uid="uid://dg2h2ab7drj68" path="res://MenuComponents/menu_options.tscn" id="5_arb0k"]
[ext_resource type="AudioStream" uid="uid://3e0fdgylyqh1" path="res://Audio/select_006.ogg" id="5_cl4rm"]
[ext_resource type="AudioStream" uid="uid://cotrmkt7iiyf2" path="res://Audio/confirmation_003.ogg" id="6_8kofg"]
[ext_resource type="PackedScene" uid="uid://dbvpw72tifwac" path="res://MenuComponents/action_buttons_hint.tscn" id="7_hndwr"]
[ext_resource type="Texture2D" uid="uid://5hycghmemn5y" path="res://Icons/XboxButtons/A.png" id="8_iktts"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_63xqc")
script = ExtResource("1_kvw74")

[node name="MainMenuContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitleContainer" type="MarginContainer" parent="MainMenuContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -475.0
offset_right = 475.0
offset_bottom = 526.0
grow_horizontal = 2
theme_override_constants/margin_left = 220
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 200

[node name="GameTitle" type="Label" parent="MainMenuContainer/GameTitleContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_g7lva")
theme_override_font_sizes/font_size = 100
text = "The Game Title"

[node name="MenuOptions" parent="MainMenuContainer" instance=ExtResource("5_arb0k")]
layout_mode = 1
focus_sound = ExtResource("5_cl4rm")
press_sound = ExtResource("6_8kofg")

[node name="ActionButtonsHint" parent="MainMenuContainer" instance=ExtResource("7_hndwr")]
layout_mode = 1
button_hints = Array[Dictionary]([{
"icon": ExtResource("8_iktts"),
"text": "Select"
}])
